--- a/styles.css
+++ b/styles.css
@@ -276,11 +276,25 @@ button:hover{
     }
 
     .cards {
-        gap: 2rem;
+        gap: 1rem;
     }
 
     .text {
         left: 3rem;
         top: 15rem;
     }
+}
+
+@media screen and (max-width:400px) {
+    .cards {
+        gap: 0rem;
+    }
+
+    .card-logo img {
+        width: 45px;
+     }
+     
+     .card-logo .card-img{
+         width: 25px;
+     }
 }
