--- a/styles.css
+++ b/styles.css
@@ -205,6 +205,16 @@ button:hover{
 
 }
 
+@media screen and (max-width:1200px) {
+    .card-logo img {
+        width: 50px;
+     }
+     
+     .card-logo .card-img{
+         width: 25px;
+     }
+
+}
 
 
 
@@ -242,12 +252,27 @@ button:hover{
         top: 20rem;
     }
 
-    .card-logo img {
-        width: 50px;
+    .cards {
+        gap: 0;
+    }
+
+     .card-logo img {
+        width: 45px;
      }
      
      .card-logo .card-img{
-         width: 30px;
+         width: 25px;
+     }
+     
+}
+
+@media screen and (max-width:700px) {
+    .card-logo img {
+        width: 30px;
+     }
+     
+     .card-logo .card-img{
+         width: 18px;
      }
 }
 
@@ -275,26 +300,28 @@ button:hover{
         width: 380px;
     }
 
-    .cards {
-        gap: 1rem;
-    }
-
     .text {
         left: 3rem;
         top: 15rem;
     }
-}
-
-@media screen and (max-width:400px) {
-    .cards {
-        gap: 0rem;
-    }
 
     .card-logo img {
-        width: 45px;
+        width: 35px;
      }
      
      .card-logo .card-img{
-         width: 25px;
+         width: 20px;
      }
+}
+
+@media screen and (max-width:500px) {
+
+    .card-logo img {
+        width: 25px;
+     }
+     
+     .card-logo .card-img{
+         width: 15px;
+     }
+
 }
